--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,10 +2,11 @@ fastapi==0.109.0
 uvicorn==0.27.0
 python-dotenv==1.0.0
 pydantic==2.5.3
+pydantic-settings==2.1.0
 boto3==1.34.0
 chromadb==0.4.22
-langchain==0.1.0
-langchain-community==0.0.10
+langchain==0.1.20
+langchain-community==0.0.38
 pypdf==3.17.4
 python-docx==1.1.0
 sentence-transformers>=2.3.0
