--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,12 +1,10 @@
 fastapi==0.109.0
 uvicorn==0.27.0
 python-dotenv==1.0.0
-pydantic==2.5.3
+pydantic>=2.5.3
 pydantic-settings==2.1.0
 boto3==1.34.0
 chromadb==0.4.22
-langchain==0.1.20
-langchain-community==0.0.38
 pypdf==3.17.4
 python-docx==1.1.0
 sentence-transformers>=2.3.0
@@ -19,3 +17,10 @@ pandas==2.1.4
 openpyxl==3.1.2
 huggingface_hub>=0.17.0
 cryptography>=3.4.8
+
+# Multi-agent dependencies - compatible versions
+langgraph==0.2.28
+langchain==0.2.16
+langchain-community==0.2.16
+langchain-anthropic==0.1.23
+langchain-core==0.2.40
